# Fruity

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  bot.py  jester.db  main.py  pyproject.toml  test.py
cogs/: fun.py  help.py  minigames.py  other.py  points.py  wook.py
docs/: CNAME  categories.js  index.html  invite.html  more.html  script.js  style.css  terms.html  terms.md
