[tool.poetry]
name = "Fruity"
version = "1.0.0"
description = ""
authors = ["ninjadev64"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = {extras = ["speed"], version = "^2.0.0"}
art = "^5.7"
python-dotenv = "^0.20.0"
topggpy = "^1.4.0"
firebase-admin = "^5.2.0"
protobuf = "3.20.1"
aiohttp = "3.7.4"
colorama = "^0.4.5"
geopy = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
